# ChangeLog for sci-chemistry/reduce
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/reduce/ChangeLog,v 1.5 2006/08/09 16:19:38 dberkholz Exp $

  09 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  reduce-2.21.030604.ebuild:
  Update SRC_URI.

  05 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Remove myself as maintainer, anyone feel free to work on this, although I'll
  continue to do so as well.

  09 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  reduce-2.21.030604.ebuild:
  x86/ppc stable.

  07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update to my new email address.

*reduce-2.21.030604 (04 Jun 2006)

  04 Jun 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/2.21.030604-gcc4.patch, +metadata.xml, +reduce-2.21.030604.ebuild:
  New package to add hydrogens to a Protein Data Bank (PDB) molecule structure
  file.
