@@ -3,15 +3,20 @@ MD5 8a698c351b0f63bb4df171fd994e956f files/2.21.030604-gcc4.patch 3946
 RMD160 f9c8d7f884bc942e31bd0273fe4f43d8f0e2ecc6 files/2.21.030604-gcc4.patch 3946
 SHA256 9c6372e7d44ff83b42ab0ad7f08b7173c8cbfabe204b991ec828c5428d048ff8 files/2.21.030604-gcc4.patch 3946
 DIST reduce.2.21.030604.src.tgz 132262 RMD160 db5ff4ea12e50c7ea9d8215011f80966ce5397b6 SHA1 c69944bb28beb50013e8c8b6ea67d2581e924777 SHA256 0889c1bed10680090a1fd62cce1a46a13768b4ea77cbf036245b15e2e542337d
+DIST reduce.3.02.060709.source.tgz 1266648 RMD160 2ea7cca496901fa3e7e4975bcd6fce4fba17ff44 SHA1 491bd499ca1d935f36bc2c134c2e2f92aa8205bb SHA256 bd134c3e5859a6ec361b1c07405d17c3ffc14cfcb26ebbe439d1cfe07208a275
 DIST reduce_het_dict.txt.zip 983850 RMD160 5d1aa16adc4c9e3355b58937dbe8033afa4e8a17 SHA1 13a73d98315deef4abc76afa3cb5b7dc775c3882 SHA256 382802ebb89332dd0a0f208ef5ca6b9cd0ddca5b7a5d6bf8226d5aa1f506a384
 EBUILD reduce-2.21.030604.ebuild 1683 RMD160 369217d42311cef4432c36a9f8f03b40d87e39ee SHA1 48a610fb82ecc5146cc58339a1412d4bb792da98 SHA256 700626492a8d67d2084e802cd86842b39a659f3ab81a71ef04c9b2796711ddd2
 MD5 1c3bd311d7103c5e0cb1206ea5e05d6d reduce-2.21.030604.ebuild 1683
 RMD160 369217d42311cef4432c36a9f8f03b40d87e39ee reduce-2.21.030604.ebuild 1683
 SHA256 700626492a8d67d2084e802cd86842b39a659f3ab81a71ef04c9b2796711ddd2 reduce-2.21.030604.ebuild 1683
-MISC ChangeLog 958 RMD160 9e6406ba20732bf733bd61a72f7368c8b3ae193a SHA1 e288032bb6150dced68a18b6266f67a04a178a29 SHA256 3f4623986ef05a06bb932325645ac2566896a212eead174bbd642a5a94bc04d9
-MD5 9d8a75a9e2c30d35d60811d4e1321de1 ChangeLog 958
-RMD160 9e6406ba20732bf733bd61a72f7368c8b3ae193a ChangeLog 958
-SHA256 3f4623986ef05a06bb932325645ac2566896a212eead174bbd642a5a94bc04d9 ChangeLog 958
+EBUILD reduce-3.02.060709.ebuild 1367 RMD160 e26fea3ef6d9f54a9a778cec75a7362106d5bba7 SHA1 eabd2c6dedfbfc9e2b1f10549af4da54f1b5d690 SHA256 0c43274bbeb55cf0787f239b0932969bbdc1826608aecec9d23517c2cface37d
+MD5 5c727d734ed9573e30cd938c5646a717 reduce-3.02.060709.ebuild 1367
+RMD160 e26fea3ef6d9f54a9a778cec75a7362106d5bba7 reduce-3.02.060709.ebuild 1367
+SHA256 0c43274bbeb55cf0787f239b0932969bbdc1826608aecec9d23517c2cface37d reduce-3.02.060709.ebuild 1367
+MISC ChangeLog 1087 RMD160 dd4047f6494c8281d9ed5dc0b2d9dba0360b7055 SHA1 1b625e2c3a8a1aa1a3beba15cc814daccd0aba3f SHA256 93c9491e80a0a110493c5857a0b17cb12fe65e7d987f16f96f9c2f7c73a622be
+MD5 bdc9fea11c55c1c8c6a1c6bb354296b8 ChangeLog 1087
+RMD160 dd4047f6494c8281d9ed5dc0b2d9dba0360b7055 ChangeLog 1087
+SHA256 93c9491e80a0a110493c5857a0b17cb12fe65e7d987f16f96f9c2f7c73a622be ChangeLog 1087
 MISC metadata.xml 156 RMD160 dc078172bfebcb25d69bdf8731714f9cce9d3e36 SHA1 da2b240a255820145b7c83a5c48e45b96b7e9ee6 SHA256 5d22100902db7507a5b5493dd4a66cdb08025faf80a2c0b75e6392315c47f900
 MD5 8c623e53daafa025137077c6b65815bd metadata.xml 156
 RMD160 dc078172bfebcb25d69bdf8731714f9cce9d3e36 metadata.xml 156
@@ -19,3 +24,6 @@ SHA256 5d22100902db7507a5b5493dd4a66cdb08025faf80a2c0b75e6392315c47f900 metadata
 MD5 c11171b0a99e888d7e44388991357d64 files/digest-reduce-2.21.030604 509
 RMD160 1d2f43617d6b6b136e2ab041298b74aa23d0fd29 files/digest-reduce-2.21.030604 509
 SHA256 f543714aaf050596c1f088716c350a5d6e15c160a6022b9289911a1d14fb4a78 files/digest-reduce-2.21.030604 509
+MD5 f28064b729cd2c6b8719ba3491201656 files/digest-reduce-3.02.060709 521
+RMD160 c19316cc09c41b085b0ca90c25643a972b194fcb files/digest-reduce-3.02.060709 521
+SHA256 b17e26e655c87b13ca9c21e5aa6b9f324c33f0344718e99c979a4a505beb7c76 files/digest-reduce-3.02.060709 521
