@@ -1,0 +1,6 @@
+MD5 b93cb5c561f7badc69f8bcdbfe7e2955 reduce.3.02.060709.source.tgz 1266648
+RMD160 2ea7cca496901fa3e7e4975bcd6fce4fba17ff44 reduce.3.02.060709.source.tgz 1266648
+SHA256 bd134c3e5859a6ec361b1c07405d17c3ffc14cfcb26ebbe439d1cfe07208a275 reduce.3.02.060709.source.tgz 1266648
+MD5 1ec7b357d652fb46c9db3a14cabefcd1 reduce_het_dict.txt.zip 983850
+RMD160 5d1aa16adc4c9e3355b58937dbe8033afa4e8a17 reduce_het_dict.txt.zip 983850
+SHA256 382802ebb89332dd0a0f208ef5ca6b9cd0ddca5b7a5d6bf8226d5aa1f506a384 reduce_het_dict.txt.zip 983850
