@@ -1,6 +1,12 @@
 # ChangeLog for sci-chemistry/reduce
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/reduce/ChangeLog,v 1.5 2006/08/09 16:19:38 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/reduce/ChangeLog,v 1.6 2006/08/09 16:22:09 dberkholz Exp $
+
+*reduce-3.02.060709 (09 Aug 2006)
+
+  09 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>;
+  +reduce-3.02.060709.ebuild:
+  Bump.
 
   09 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>;
   reduce-2.21.030604.ebuild:
